Implemented player and tribe explorer for atlas
Updated the base player and tribe explorer components to work with atlas. Not at all strongly typed but the API at this moment is a limiting factor. Will need to re-write templates when the API is re-written and models normalized.

--- a/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-players-and-tribes/modules/atlas-company-details/atlas-company-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-players-and-tribes/modules/atlas-company-details/atlas-company-details.component.html
@@ -1,1 +1,8 @@
-<p>atlas-company-details works!</p>
+<supremegaming-tribe-details
+  [game]="'atlas'"
+  [tribeGuid]="tribeGuid"
+  [showAvatar]="false"
+  [columnsVisible]="['CharacterName', 'PlayMap', 'LastOnline']"
+  [columnLabels]="['Pathfinder Name', 'Grid', 'Last Online']"
+  [playerDetailsRoute]="'../../pathfinders'"
+></supremegaming-tribe-details>
