--- a/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-players-and-tribes/modules/atlas-company-list/atlas-company-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-players-and-tribes/modules/atlas-company-list/atlas-company-list.component.html
@@ -1,1 +1,8 @@
-<p>atlas-company-list works!</p>
+<supremegaming-tribe-search-list
+  game="atlas"
+  placeholder="Type to search Atlas companys by name, company id, etc."
+  [columnsVisible]="['TribeName', 'MemberCount']"
+  [columnLabels]="['Company', 'Members']"
+  [playerDetailsRoute]="'../pathfinders'"
+  [tribeDetailsRoute]="'./'"
+></supremegaming-tribe-search-list>
