--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-details/player-details.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-details/player-details.component.html
@@ -1,7 +1,7 @@
 <div class="overview">
   <ng-container *ngIf="player | async as pl">
     <div class="character-fragment">
-      <div class="avatar">
+      <div *ngIf="game === 'ark'" class="avatar">
         <img [src]="pl.AvatarUrl" alt="Avatar image" />
       </div>
 
@@ -14,19 +14,37 @@
 
         <div>
           <div class="tribe-membership">
-            <div [ngSwitch]="pl.TribeGuid !== null">
+            <div *ngIf="game === 'ark'" [ngSwitch]="pl.TribeGuid !== null">
               <div *ngSwitchCase="true">
                 <span class="player-attribute">Tribe: </span
                 ><a [routerLink]="[tribeDetailsRoute, pl.TribeGuid]">{{pl.TribeName}}</a>
               </div>
               <div *ngSwitchDefault><span class="player-attribute">Tribe: </span>Not in any tribe</div>
             </div>
+
+            <div *ngIf="game === 'atlas'" [ngSwitch]="pl.TribeId !== null">
+              <div *ngSwitchCase="true">
+                <span class="player-attribute">Company: </span
+                ><a [routerLink]="[tribeDetailsRoute, pl.TribeId]">{{pl.TribeName}}</a>
+              </div>
+              <div *ngSwitchDefault><span class="player-attribute">Company: </span>Not in any company</div>
+            </div>
           </div>
 
-          <p><span class="player-attribute">Owner</span>: <a [href]="pl.ProfileUrl" target="_blank">{{pl.SteamName}}</a></p>
-          <p><span class="player-attribute">Level: </span>{{pl.Level}}</p>
-          <p><span class="player-attribute">Map: </span>{{pl.PlayMap}}</p>
-          <p><span class="player-attribute">Last Online</span>: {{pl.FileUpdated | date : 'short'}}</p>
+          <p *ngIf="pl.SteamName">
+            <span class="player-attribute">Owner</span>: <a [href]="pl.ProfileUrl" target="_blank">{{pl.SteamName}}</a>
+          </p>
+
+          <p *ngIf="pl.Level"><span class="player-attribute">Level: </span>{{pl.Level}}</p>
+
+          <p *ngIf="game === 'ark'"><span class="player-attribute">Map: </span>{{pl.PlayMap}}</p>
+          <p *ngIf="game === 'atlas'"><span class="player-attribute">Grid: </span>{{pl.PlayMap}}</p>
+
+          <p *ngIf="pl.FileUpdated">
+            <span class="player-attribute">Last Online</span>: {{pl.FileUpdated | date : 'short'}}
+          </p>
+
+          <p *ngIf="pl.LastOnline"><span class="player-attribute">Last Online</span>: {{pl.LastOnline | date : 'short'}}</p>
         </div>
 
         <div class="metadata">
