--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-table/player-table.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-table/player-table.component.html
@@ -14,7 +14,7 @@
         <span class="character-profile-picture" *ngIf="showAvatar"
           ><img [src]="player.AvatarUrl" [alt]="player.SteamName" [title]="player.SteamName"
         /></span>
-        <a [routerLink]="[playerDetailsRoute, player.Guid]" routerLinkActive="router-link-active"
+        <a [routerLink]="[playerDetailsRoute, player.Guid ? player.Guid : player.Id]" routerLinkActive="router-link-active"
           >{{player.CharacterName}}</a
         >
       </td>
@@ -22,14 +22,20 @@
       <td *ngIf="columnsVisible | includes : 'Level'">{{player.Level}}</td>
 
       <td *ngIf="columnsVisible | includes : 'TribeName'">
-        <a [routerLink]="[tribeDetailsRoute, player.TribeGuid]" routerLinkActive="router-link-active"
+        <a
+          [routerLink]="[tribeDetailsRoute, player.TribeGuid ? player.TribeGuid : player.TribeId]"
+          routerLinkActive="router-link-active"
           >{{player.TribeName}}</a
         >
       </td>
 
       <td *ngIf="columnsVisible | includes : 'PlayMap'">{{player.PlayMap}}</td>
 
+      <!-- Ark last online -->
       <td *ngIf="columnsVisible | includes : 'FileUpdated'">{{player.FileUpdated | date : 'short'}}</td>
+
+      <!-- Atlas last online -->
+      <td *ngIf="columnsVisible | includes : 'LastOnline'">{{player.LastOnline | date : 'short'}}</td>
     </tr>
   </tbody>
 </table>
