--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-table/tribe-table.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-table/tribe-table.component.html
@@ -14,6 +14,10 @@
         <a [routerLink]="[tribeDetailsRoute, tribe.Guid]" routerLinkActive="router-link-active">{{tribe.Name}}</a>
       </td>
 
+      <td class="name-and-avatar" *ngIf="columnsVisible | includes : 'TribeName'">
+        <a [routerLink]="[tribeDetailsRoute, tribe.Id]" routerLinkActive="router-link-active">{{tribe.TribeName}}</a>
+      </td>
+
       <td *ngIf="columnsVisible | includes : 'MemberCount'">{{tribe.Members.length}}</td>
 
       <td *ngIf="columnsVisible | includes : 'PlayMap'">{{tribe.PlayMap}}</td>
