--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -32,7 +32,7 @@
                 </a>
               </li>
               <li class="descriptive-menu-item">
-                <a href="https://supremegaming.gg/forums">
+                <a href="https://supremegaming.gg/forums/">
                   <span>Forums</span>
                   <span>Archive, long-term discussions, lore, and more!</span>
                 </a>
@@ -61,7 +61,7 @@
                       </a>
                     </li>
                     <li>
-                      <a [routerLink]="['/games/atlas/players-and-tribes']">
+                      <a [routerLink]="['/games/atlas/players-and-companies']">
                         <span>Players &amp; Companies</span>
                         <span>Learn about company membership</span>
                       </a>
