--- a/libs/pages/public/src/lib/games/modules/atlas/atlas.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/atlas.component.html
@@ -4,7 +4,7 @@
       <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Atlas</a>
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
       <a [routerLink]="['settings']" routerLinkActive="active-sub-menu">Settings</a>
-      <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Companies</a>
+      <a [routerLink]="['players-and-companies']" routerLinkActive="active-sub-menu">Players &amp; Companies</a>
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
     </div>
