--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-player-details/ark-pf-player-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-player-details/ark-pf-player-details.component.html
@@ -1,1 +1,10 @@
-<p>ark-pf-player-details works!</p>
+<supremegaming-player-details
+  [game]="'ark'"
+  [playerGuid]="playerGuid"
+  [showAvatar]="false"
+  [showCount]="false"
+  [columnsVisible]="['CharacterName', 'PlayMap', 'FileUpdated']"
+  [columnLabels]="['Name', 'Map', 'Last Online']"
+  [tribeDetailsRoute]="'../../tribes'"
+  [playerDetailsRoute]="'../../survivors'"
+></supremegaming-player-details>
