--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-tribe-details/ark-pf-tribe-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-tribe-details/ark-pf-tribe-details.component.html
@@ -1,1 +1,8 @@
-<p>ark-pf-tribe-details works!</p>
+<supremegaming-tribe-details
+  [game]="'ark'"
+  [tribeGuid]="tribeGuid"
+  [showAvatar]="false"
+  [columnsVisible]="['CharacterName', 'Level', 'FileUpdated']"
+  [columnLabels]="['Name', 'Level', 'Last Online']"
+  [playerDetailsRoute]="'../../survivors'"
+></supremegaming-tribe-details>
