--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-tribe-list/ark-pf-tribe-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-tribe-list/ark-pf-tribe-list.component.html
@@ -1,1 +1,8 @@
-<p>ark-pf-tribe-list works!</p>
+<supremegaming-tribe-search-list
+  game="ark"
+  placeholder="Type to search Ark tribes by name, tribe id, etc."
+  [columnsVisible]="['Name', 'MemberCount', 'PlayMap']"
+  [columnLabels]="['Tribe Name', 'Members', 'Map']"
+  [playerDetailsRoute]="'../survivors'"
+  [tribeDetailsRoute]="'./'"
+></supremegaming-tribe-search-list>
