--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-online-list/ark-pf-online-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-players-and-tribes/modules/ark-pf-online-list/ark-pf-online-list.component.html
@@ -1,1 +1,7 @@
-<p>ark-pf-online-list works!</p>
+<supremegaming-online-player-list
+  [servers]="servers | async"
+  [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
+  [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
+  [playerDetailsRoute]="'./survivors'"
+  [tribeDetailsRoute]="'./tribes'"
+></supremegaming-online-player-list>
