--- a/libs/pages/public/src/lib/games/modules/ark-pf/ark-pf.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/ark-pf.component.html
@@ -9,6 +9,7 @@
       <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Tribes</a>
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
+      <a [routerLink]="['rewards']" routerLinkActive="active-sub-menu">Shop Rewards</a>
     </div>
   </supremegaming-sub-header>
 </div>
