--- a/libs/pages/public/src/lib/games/modules/ark/ark.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/ark.component.html
@@ -8,6 +8,7 @@
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
       <a [routerLink]="['supply-drops']" routerLinkActive="active-sub-menu">Supply Drops</a>
+      <a [routerLink]="['rewards']" routerLinkActive="active-sub-menu">Shop Rewards</a>
     </div>
   </supremegaming-sub-header>
 </div>
