--- a/libs/pages/public/src/lib/games/modules/atlas/atlas.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/atlas.component.html
@@ -7,6 +7,7 @@
       <a [routerLink]="['players-and-companies']" routerLinkActive="active-sub-menu">Players &amp; Companies</a>
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
+      <a [routerLink]="['rewards']" routerLinkActive="active-sub-menu">Shop Rewards</a>
     </div>
   </supremegaming-sub-header>
 </div>
