Added interactions copy component
Implemented on ark overview page

--- a/libs/ui/src/lib/modules/servers/components/server-overview/server-overview.component.html
+++ b/libs/ui/src/lib/modules/servers/components/server-overview/server-overview.component.html
@@ -10,7 +10,10 @@
       </div>
     </div>
   </div>
-  <p class="server-ip"><a [href]="connection">{{server.host}}:{{server.port}}</a></p>
+  <div class="server-connection">
+    <p class="server-ip"><a [href]="connection">{{server.host}}:{{server.port}}</a></p>
+    <supremegaming-copy [text]="server.host + ':' + server.port"></supremegaming-copy>
+  </div>
 </div>
 
 <div class="action">
