--- a/libs/scss/modules/_search.scss
+++ b/libs/scss/modules/_search.scss
@@ -1,42 +1,11 @@
 @import 'libs/scss/colors';
 @import 'libs/scss/mixins';
-
-::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: $support;
-  opacity: 0.2; /* Firefox */
-}
-
-:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: $base_lightened;
-}
-
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: $base_lightened;
-}
+@import 'libs/scss/modules/forms';
 
 .search-container {
   margin-bottom: 2rem;
   width: 1;
-
-  input {
-    padding: 0.75rem 0.25rem;
-    background-color: transparent;
-    border: none;
-    font-size: 1.25rem;
-    color: $support;
-    border-bottom: 2pt solid lighten($color: $base_lightened, $amount: 15%);
-    width: 100%;
-    @include transition(border-bottom 0.3s);
-
-    &:focus,
-    &:focus-visible {
-      outline: none;
-      border-bottom: 2pt solid $primary_lightened;
-    }
-  }
+  font-size: 1.25rem;
 }
 
 .search-feedback {
