--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -200,21 +200,18 @@
           <div class="sub-menu">
             <ul>
               <li class="descriptive-menu-item">
-                <a [routerLink]="['/donate/rewards']" routerLinkActive="router-link-active">
-                  <span>Rewards</span>
-                  <span>Learn about donation levels, in-game shops, and plugin unlocks</span>
+                <a [routerLink]="['/donate']" routerLinkActive="router-link-active">
+                  <span>How to Donate</span>
+                  <span>Explore all of the donation options for Supreme Gaming.</span>
                 </a>
               </li>
               <li class="descriptive-menu-item">
-                <a [routerLink]="['/donate/shop']" routerLinkActive="router-link-active">
-                  <span>PayPal</span>
-                  <span>Make one-time donations for in-game points or currency</span>
-                </a>
-              </li>
-              <li class="descriptive-menu-item">
-                <a href="https://www.patreon.com/supremegaming" target="_blank" rel="noopener noreferrer">
-                  <span>Patreon</span>
-                  <span>Become a recurring subscriber and earn monthly rewards</span>
+                <a [routerLink]="['/donate/info']" routerLinkActive="router-link-active">
+                  <span>Donation System</span>
+                  <span
+                    >Donation perks go beyond just points. Learn about all the perks you can unlock with your
+                    contribution.</span
+                  >
                 </a>
               </li>
             </ul>
