--- a/apps/supremegaming-angular/src/styles.scss
+++ b/apps/supremegaming-angular/src/styles.scss
@@ -128,6 +128,10 @@ section.root {
   padding-bottom: 5rem;
 }
 
+.content-section {
+  margin-bottom: 3rem;
+}
+
 //
 // Deep penetrating sub-menu header styles
 //
