--- a/libs/scss/modules/_forms.scss
+++ b/libs/scss/modules/_forms.scss
@@ -32,3 +32,59 @@ input {
     border-bottom: 2pt solid $primary_lightened;
   }
 }
+
+a.button,
+supremegaming-button .label {
+  padding: 0.85rem 1.25rem;
+}
+
+supremegaming-button,
+a.button {
+  position: relative;
+  color: $primary;
+  border: 2pt solid $primary;
+  border-radius: 10pt;
+  margin: 0.75rem;
+  font-weight: 600;
+  opacity: 0.8;
+  @include transition(color 0.3s, background 0.3s, opacity 0.3s);
+
+  &.flex {
+    @include flexbox();
+    @include flex-direction(row);
+    @include justify-content(center);
+  }
+
+  &.inline {
+    display: inline-block;
+  }
+
+  &.block {
+    display: block;
+  }
+
+  &.secondary {
+    background: $primary;
+    color: $base;
+    opacity: 0.85;
+  }
+
+  &:hover {
+    background: $primary;
+    color: $base;
+    opacity: 1;
+  }
+
+  button {
+    cursor: pointer;
+  }
+
+  button {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+  }
+}
