Enabled strict templates

--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-details/player-details.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-details/player-details.component.html
@@ -1,5 +1,5 @@
 <div class="overview">
-  <ng-container *ngIf="player | async as pl">
+  <ng-container *ngIf="(player | async) as pl">
     <div class="character-fragment">
       <div *ngIf="game === 'ark'" class="avatar">
         <img [src]="pl.AvatarUrl" alt="Avatar image" />
