paypal button redirects to current live site

--- a/libs/ui/src/lib/modules/shop/components/donation-method-selection/donation-method-selection.component.html
+++ b/libs/ui/src/lib/modules/shop/components/donation-method-selection/donation-method-selection.component.html
@@ -24,7 +24,8 @@
       </p>
 
       <div class="cta">
-        <a [routerLink]="['/']" routerLinkActive="router-link-active" class="button inline secondary">Donate with PayPal</a>
+        <!-- <a [routerLink]="['/']" routerLinkActive="router-link-active" class="button inline secondary">Donate with PayPal</a> -->
+        <a href="https://supremegaming.gg/donate" target="_blank" class="button inline secondary">Donate with PayPal</a>
       </div>
     </div>
   </div>
