--- a/libs/pages/public/src/lib/games/modules/conan/conan.component.html
+++ b/libs/pages/public/src/lib/games/modules/conan/conan.component.html
@@ -4,9 +4,9 @@
       <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Conan </a>
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
       <a [routerLink]="['settings']" routerLinkActive="active-sub-menu">Settings</a>
-      <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Clans</a>
+      <!-- <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Clans</a> -->
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
-      <a [routerLink]="['pippi']" routerLinkActive="active-sub-menu">Pippi</a>
+      <!-- <a [routerLink]="['pippi']" routerLinkActive="active-sub-menu">Pippi</a> -->
     </div>
   </supremegaming-sub-header>
 </div>
