Add space engineers game module

--- a/libs/ui/src/lib/modules/servers/components/server-list/server-list.component.html
+++ b/libs/ui/src/lib/modules/servers/components/server-list/server-list.component.html
@@ -1,1 +1,5 @@
-<supremegaming-server-overview *ngFor="let server of servers" [server]="server"></supremegaming-server-overview>
+<supremegaming-server-overview
+  *ngFor="let server of servers"
+  [server]="server"
+  [queryStatus]="queryStatus"
+></supremegaming-server-overview>
