--- a/libs/ui/src/lib/modules/servers/components/server-overview/server-overview.component.scss
+++ b/libs/ui/src/lib/modules/servers/components/server-overview/server-overview.component.scss
@@ -26,6 +26,10 @@
 }
 
 .info {
+  @include flexbox();
+  @include flex-direction(column);
+  @include align-items(flex-start);
+
   .server-connection {
     @include flexbox();
     @include flex-direction(row);
