Add base routes, game, and package selection components

--- a/apps/supremegaming-angular/src/styles.scss
+++ b/apps/supremegaming-angular/src/styles.scss
@@ -231,4 +231,24 @@ section.root {
   padding: 1.25rem 1.5rem;
   border: 1pt solid $base_lightened;
   border-radius: 5pt;
+  transition: border-color 0.25s;
+
+  &.lit {
+    border-color: $base_focus;
+  }
+
+  &.hover-light {
+    &:hover {
+      border-color: $base_focus;
+    }
+  }
+}
+
+.interactable {
+  transition: opacity 0.25s;
+
+  &.deactivated {
+    opacity: 0.4;
+    pointer-events: none;
+  }
 }
