--- a/libs/ui/src/lib/modules/shop/components/donation-method-selection/donation-method-selection.component.html
+++ b/libs/ui/src/lib/modules/shop/components/donation-method-selection/donation-method-selection.component.html
@@ -24,27 +24,10 @@
       </p>
 
       <div class="cta">
-        <!-- <a [routerLink]="['/']" routerLinkActive="router-link-active" class="button inline secondary">Donate with PayPal</a> -->
-        <a href="https://supremegaming.gg/donate" target="_blank" class="button inline secondary">Donate with PayPal</a>
+        <a [routerLink]="['one-time']" routerLinkActive="router-link-active" class="button inline secondary"
+          >Donate with PayPal</a
+        >
       </div>
     </div>
-  </div>
-</div>
-
-<div class="column12">
-  <h1>Why Donate?</h1>
-
-  <p>
-    Supreme Gaming operates 100% through community contributions; from data center space fees to licenses to the various
-    software pieces we employ to that make our game servers what they are. Contributions are also 100% voluntary so only
-    donate if you are able and would like to help keep the lights on. So long as we have the support of the community,
-    Supreme Gaming will continue to operate. In exchange for your contribution, we have devised a series of perks and rewards
-    to make it worth your while.
-  </p>
-
-  <div class="cta">
-    <a [routerLink]="['./info']" routerLinkActive="router-link-active" class="button inline"
-      >Find out more about perks and rewards</a
-    >
   </div>
 </div>
